agrego get y post de media de cursos
